<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/content_login">

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_user_name"
        android:layout_alignStart="@+id/tv_user_name"
        android:layout_below="@+id/tv_user_name"
        android:layout_marginTop="23dp"
        android:text="@string/tv_password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="143dp"
        android:text="@string/tv_username"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/et_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/tv_usernamehint"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_alignBaseline="@+id/tv_user_name"
        android:layout_alignBottom="@+id/tv_user_name"
        android:layout_toRightOf="@+id/tv_user_name"
        android:layout_marginLeft="5dp" />
    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_password"
        android:layout_alignBottom="@+id/tv_password"
        android:layout_alignLeft="@+id/et_user_name"
        android:layout_toRightOf="@+id/tv_password"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/et_password"
        android:layout_marginRight="65dp"
        android:layout_marginTop="16dp"
        android:text="@string/bt_login" />

    <Button
        android:id="@+id/bt_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="65dp"
        android:text="@string/bt_rigester"
        android:layout_alignBaseline="@+id/bt_login"
        android:layout_alignBottom="@+id/bt_login" />
</RelativeLayout>