<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="50dp"
    android:paddingBottom="20dp"
    android:weightSum="1">


    <ImageView
        android:id="@+id/img_icon"
        android:layout_width="141dp"
        android:layout_height="116dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@mipmap/icon" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/tv_welcome"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tv_hi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/tv_hi"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tv_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/tv_temperature"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="30dp"
        android:text="10:10:10"
        android:textAppearance="?android:attr/textAppearanceMedium" />



</LinearLayout>